--- a/SeDipuAlba.ConectividadApiRestSeres/SeDipuAlba.ConectividadApiRestSeres/SeDipuAlba.ConectividadApiRestSeres.csproj
+++ b/SeDipuAlba.ConectividadApiRestSeres/SeDipuAlba.ConectividadApiRestSeres/SeDipuAlba.ConectividadApiRestSeres.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="SeDipuAlba.Artilugios" Version="1.0.9105.29677" />
   </ItemGroup>
 
